--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "curso-node-js",
+  "name": "curso-node",
   "version": "1.0.0",
-  "description": "",
   "main": "1.os-info.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,5 +13,9 @@
   },
   "devDependencies": {
     "standard": "^17.1.2"
-  }
+  },
+  "eslintConfig": {
+    "extends": "standard"
+  },
+  "description": ""
 }
